compiler/test-data/parser/expressions/errors/invalid_ternary.frel
module expressions.errors.invalid_ternary

blueprint Bad {
    x : String = true ? "yes"
}
